--- a/SpotifyPlaylistGenerator/appsettings.json
+++ b/SpotifyPlaylistGenerator/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
 
-  "ClientID": "30162b7b6e2648159d45966fd6ed2074",
-  "ClientSecret": "820e3315e6bb4ac280749f99582e97e4"
+  "ClientID": "",
+  "ClientSecret": ""
 }
