feat: httpclient with token

--- a/SpotifyPlaylistGenerator/appsettings.json
+++ b/SpotifyPlaylistGenerator/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
 
-  "ClientID": "",
-  "ClientSecret": ""
+  "ClientID": "30162b7b6e2648159d45966fd6ed2074",
+  "ClientSecret": "7ce889a3ce794695a4ec1277b1fd4079"
 }
