feat: Delete with pagination, build track list

--- a/SpotifyPlaylistGenerator/appsettings.json
+++ b/SpotifyPlaylistGenerator/appsettings.json
@@ -7,5 +7,5 @@
   },
 
   "ClientID": "30162b7b6e2648159d45966fd6ed2074",
-  "ClientSecret": "0c6433e400d24ebd93e81fa9abc5e3dd"
+  "ClientSecret": ""
 }
